src/sass/components/_location-about.scss
/*
 *  Location header styles.
 */

.location-about {
  padding: 3.5em 0;
  background: $white;
}

.subheader {
  margin-bottom: 0.5em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  color: $grey;
}

.location-about__description {
  position: relative;
  margin-bottom: 2em;

  @include min($tablet) {
    display: inline-block;
    width: 60%;
    margin: 0 $gutter-width 0 0;
    vertical-align: top;
  }

  &::after {
    content: '';
    position: absolute;
    bottom: 20px;
    left: 0;
    height: 200px;
    width: 100%;
    background: linear-gradient(0deg, $white, rgba($white, 0));
  }
}

.read-more {
  position: relative;
  display: block;
  z-index: 100;
  color: $blue;
  text-align: left;
  transition: color 200ms ease;

  @include min($tablet) {
    text-align: center;
  }

  &:hover {
    color: $black;
  }
}

.location-about__details {
  margin-left: $gutter-width;

  @include min($tablet) {
    display: inline-block;
    width: 40%;
    vertical-align: top;
  }
}

.detail {
  margin-bottom: 1em;
}

